@@ -150,6 +150,7 @@ Trunk (unreleased changes)
                server going down and results in millions of lines of output
    HADOOP-2706 HBase Shell crash
    HADOOP-2712 under load, regions won't split
+   HADOOP-2675 Options not passed to rest/thrift
    
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
